--- a/Project/public/index.html
+++ b/Project/public/index.html
@@ -111,7 +111,7 @@
                         <div class="right_side"></div>
                       </div>
                     </button>
-                    <button>Sign In</button>
+                    <button id="signin_btn">Sign In</button>
                   </div>
                 </div>
               </div>
@@ -443,7 +443,7 @@
     <!-- Sign In -->
     <section id="signin">
         <div class="forms">
-            <div class="close">
+            <div class="close" id="signin_close">
                 <i class="fa-solid fa-xmark"></i>
             </div>
             <div class="form_head">
