--- a/Project/public/index.html
+++ b/Project/public/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../src/scss/style.css" />
   </head>
   <body>
+    <!-- Header -->
     <header>
       <nav>
         <div class="container">
@@ -113,13 +114,33 @@
                     </button>
                     <button id="signin_btn">Sign In</button>
                   </div>
+                  <div class="mobile_nav">
+                    <svg id="burgermenu" xmlns="http://www.w3.org/2000/svg" width="34" height="22" viewBox="0 0 34 22" fill="none">
+                        <line y1="1" x2="34" y2="1" stroke="white" stroke-width="2"/>
+                        <line y1="11" x2="34" y2="11" stroke="white" stroke-width="2"/>
+                        <line y1="21" x2="34" y2="21" stroke="white" stroke-width="2"/>
+                        </svg>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </nav>
+      <div class="mobile_items">
+        <div class="logo">
+            <img src="../src/image/LOGO.png" alt="">
+        </div>
+        <div class="mobil_lists">
+            <ul>
+                <li><a href="#">Menu 1</a></li>
+                <li><a href="#">Menu 2</a></li>
+            </ul>
+            <a href="#"> TR  <i class="fa-solid fa-chevron-down"></i></a>
+        </div>
+      </div>
     </header>
+    <!-- Main  -->
     <main>
       <!-- Backgroung Image section -->
       <section id="bg_img">
