--- a/Project/public/index.html
+++ b/Project/public/index.html
@@ -190,7 +190,7 @@
                         <img src="../src/image/Rectangle 8.png" alt="">
                     </div>
                     <div class="card_text">
-                        <h5>Brave New World</h5>
+                        <h5>Vanguard</h5>
                         <p>2018 . 1h23m</p>
                     </div>
                     <div class="card_btns">
@@ -219,7 +219,7 @@
                         <img src="../src/image/Rectangle 8.png" alt="">
                     </div>
                     <div class="card_text">
-                        <h5>Brave New World</h5>
+                        <h5>Bad Times At The El Royale</h5>
                         <p>2018 . 1h23m</p>
                     </div>
                     <div class="card_btns">
@@ -248,7 +248,7 @@
                         <img src="../src/image/Rectangle 8.png" alt="">
                     </div>
                     <div class="card_text">
-                        <h5>Brave New World</h5>
+                        <h5>John Wick 3 Parabellum</h5>
                         <p>2018 . 1h23m</p>
                     </div>
                     <div class="card_btns">
@@ -342,7 +342,7 @@
                         <img src="../src/image/Rectangle 8.png" alt="">
                     </div>
                     <div class="card_text">
-                        <h5>Brave New World</h5>
+                        <h5>John Wick 3 Parabellum</h5>
                         <p>2018 . 1h23m</p>
                     </div>
                     <div class="card_btns">
@@ -371,7 +371,7 @@
                         <img src="../src/image/Rectangle 8.png" alt="">
                     </div>
                     <div class="card_text">
-                        <h5>Brave New World</h5>
+                        <h5>Bad Times At The El Royale</h5>
                         <p>2018 . 1h23m</p>
                     </div>
                     <div class="card_btns">
@@ -400,7 +400,7 @@
                         <img src="../src/image/Rectangle 8.png" alt="">
                     </div>
                     <div class="card_text">
-                        <h5>Brave New World</h5>
+                        <h5>Vanguard</h5>
                         <p>2018 . 1h23m</p>
                     </div>
                     <div class="card_btns">
